# LearnDX12

./: .gitignore  README.md
DXRender/: CMakeLists.txt
DXRender/include/: DXWindow.h  DescriptorHeap.h  Model.h  SwapChain.h  helper.h  stdafx.h
DXRender/model/: platonic_shelf_ascii.ply
DXRender/shader/: shaders.hlsl
DXRender/src/: Application.cpp  DXWindow.cpp  DescriptorHeap.cpp  Model.cpp  SwapChain.cpp  Win32App.cpp
HelloDX12/: CMakeLists.txt  run.bat
HelloDX12/include/: Win32App.h  application.h  global.h  helper.h
HelloDX12/src/: Win32App.cpp  main.cpp
box/include/: Win32App.h
box/shader/: compileShader.bat  shaders.hlsl
bunny/: CMakeLists.txt  run.bat
bunny/config/: path.h.in
bunny/include/: Application.h  CommandQueue.h  d3dx12.h
bunny/model/: box.ply
bunny/shader/: shaders.hlsl
bunny/src/: Application.cpp  CommandQueue.cpp  DXWindow.cpp  SwapChain.cpp  main.cpp
daydayup/: README.md  figures.pptx
shadow/config/: path.h.in
shadow/include/: Application.h  Camera.h  DXWindow.h  DescriptorHeap.h  Model.h  SwapChain.h  stdafx.h
shadow/include/common/: Utility.h
shadow/model/: bun_zipper.assbin
shadow/shader/: common.hlsl  shaders.hlsl  shadow.hlsl  shadowDebug.hlsl
shadow/src/: Application.cpp  Camera.cpp  DXWindow.cpp  DescriptorHeap.cpp  Model.cpp  SwapChain.cpp
texture/: CMakeLists.txt  run.bat
texture/include/: DescriptorHeap.h  RenderItem.h  SwapChain.h
texture/include/common/: ModelLoader.cpp  ModelLoader.h  ObjHelper.h  PlyHelper.h
texture/src/: DXWindow.cpp  DescriptorHeap.cpp  Model.cpp  SwapChain.cpp  main.cpp
triangle/config/: path.h.in
triangle/include/: DXWindow.h  helper.h
triangle/src/: DXWindow.cpp
